VIT-6507: Abbott LibreView guide

--- a/docs/api-reference/link/complete-password-provider-mfa.mdx
+++ b/docs/api-reference/link/complete-password-provider-mfa.mdx
@@ -1,33 +1,31 @@
 ---
-title: "Link Password provider"
-openapi: "POST /v2/link/provider/password/{provider}"
+title: "Complete Password Provider MFA"
+openapi: "POST /v2/link/provider/password/{provider}/complete_mfa"
 ---
 
 <RequestExample>
 
 ```bash cURL
 curl --request POST \
-     --url {{BASE_URL}}/v2/link/provider/password/{provider} \
+     --url {{BASE_URL}}/v2/link/provider/password/{provider}/complete_mfa \
      --header 'Accept: application/json' \
      --header 'Content-Type: application/json' \
      --header 'x-vital-link-token: <VITAL-LINK-TOKEN>' \
      --data '
 {
-     "username": "test",
-     "password": "test"
+     "mfa_code": "012345"
 }
 '
 ```
 
 ```javascript Node
 import { VitalClient, VitalEnvironment } from '@tryvital/vital-node';
-import { IndividualProviderData, PasswordProviders } from '@tryvital/vital-node/api';
+import { CompletePasswordProviderMfaBody, PasswordProviders } from '@tryvital/vital-node/api';
 
-const request: IndividualProviderData = {
-    username: '<username>',
-    password: '<password>',
+const request: CompletePasswordProviderMfaBody = {
+    mfaCode: '<mfaCode>',
 }
-const data = await client.link.connectPasswordProvider(PasswordProviders.<provider>, request)
+const data = await client.link.completePasswordProviderMfa(PasswordProviders.<provider>, request)
 ```
 
 ```python Python
@@ -40,17 +38,16 @@ client = Vital(
   environment=VitalEnvironment.SANDBOX
 )
 
-data = client.link.connect_password_provider(
+data = client.link.complete_password_provider_mfa(
   PasswordProviders.<provider>, 
-  username="<username>", 
-  password="<password>"
+  mfa_code="<mfaCode>", 
 )
 ```
 
 ```java Java
 import com.vital.api.Vital;
 import com.vital.api.core.Environment;
-import com.vital.api.resources.link.requests.IndividualProviderData;
+import com.vital.api.resources.link.requests.CompletePasswordProviderMfaBody;
 import com.vital.api.types.PasswordProviders;
 
 Vital vital = Vital.builder()
@@ -58,13 +55,12 @@ Vital vital = Vital.builder()
         .environment(Environment.SANDBOX)
         .build();
 
-IndividualProviderData request = IndividualProviderData
+IndividualProviderData request = CompletePasswordProviderMfaBody
         .builder()
-        .username("<username>")
-        .password("<password>")
+        .mfaCode("<mfaCode>")
         .build();
 
-var data = vital.link().connectPasswordProvider(PasswordProviders.<provider>, request);
+var data = vital.link().completePasswordProviderMfa(PasswordProviders.<provider>, request);
 ```
 
 ```go Go
@@ -80,12 +76,11 @@ client := vitalclient.NewClient(
   vitalclient.WithBaseURL(vital.Environments.Sandbox),
 )
 
-request := &vital.IndividualProviderData{
-  Username: "<username>",
-  Password: "<password>",
+request := &vital.CompletePasswordProviderMfaBody{
+  MfaCode: "<mfaCode>",
 }
 
-response, err := client.Link.ConnectPasswordProvider(
+response, err := client.Link.CompletePasswordProviderMfa(
   context.TODO(), 
   vital.PasswordProviders<provider>, 
   request
